Fixed the messed up line-spacing.
Line spacing was a little messed up

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -65,14 +65,14 @@ body {
       font-size: 40px;
       font-weight: bold;
       word-spacing: 5px;
-      line-height: 0.7;
+      line-height: 1;
     }
  
     h2 {
       font-size: 20px;
       font-weight: bold;
       word-spacing: 10px;
-      line-height: 0.5;
+      line-height: 1.4;
     }
   }
   .slide:nth-of-type(1) .focus{
